# NetworkRuler-cli

./: .gitignore  LICENSE  README.md  activity_log.txt  aliases.json  network-ruler-gui.logged.py  network-ruler-gui.py  network_ruler.ps1  nr.bat  process_viewer.logged.py  pyproject.toml  test.logged.py  test.py
.github/workflows/: lint.yml  tests.yml
docs/releases/: v2.0.0.md
legacy/: NetworkRuler_cli.py  README.md  process_viewer.py
legacy/wrappers/: network_ruler.ps1  nr.bat
networkruler_cli/: __init__.py  __main__.py  app.py
networkruler_cli/commands/: alias.py  fast.py  monitor.py  network.py  process.py  profile.py
networkruler_core/: events.py  exceptions.py  logging_config.py  result.py  safety.py
networkruler_core/aliases/: __init__.py  service.py
networkruler_core/config/: __init__.py  paths.py
networkruler_core/monitor/: __init__.py  models.py  service.py
networkruler_core/network/: __init__.py  models.py  service.py
networkruler_core/platform/: __init__.py  windows.py
networkruler_core/process/: __init__.py  models.py  (+1 more)
networkruler_gui/: __main__.py  app.py  main_window.py  navigation.py  workers.py
profiles/: gaming.json  network.json  test.json  what.json  whats.json
tests/: test_fast_cli.py  test_gui_shell.py  test_monitoring.py  test_network_actions_cli.py  test_network_actions_service.py  test_network_cli.py  test_network_service.py  test_process_actions_cli.py  test_process_actions_service.py  test_process_cli.py  test_process_service.py  test_profiles_aliases.py  test_repo_hygiene.py  test_safety.py  test_v2_foundation.py
(+19 files in other folders)
