[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "networkruler"
version = "2.0.0"
description = "Windows-first CLI toolkit for network and process visibility."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RUNEoX" }]
dependencies = [
    "platformdirs>=4.0",
    "psutil>=5.9",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.7",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
nr = "networkruler_cli.app:main"
nr-gui = "networkruler_gui.app:main"

[tool.setuptools.packages.find]
include = ["networkruler_core*", "networkruler_cli*", "networkruler_gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "legacy",
    "venv",
]
